Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26528

[autotests] tst_examples tiger.qml asserts

XMLWordPrintable

      tst_examples tiger.ml asserts in the following manner. This test uses an svg file so it most probably is a malformed .svg file or the svg library.

      ~/depot/qt5/qtdeclarative$ ../qtbase/bin/qmlscene examples/quick/canvas/tiger/tiger.qml
      ASSERT: "dx != 0 || dy != 0" in file opengl/qtriangulatingstroker_p.h, line 126
      Aborted

      This was reproduced on a full qt5 installation.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            charles Charles Yin (closed Nokia identity) (Inactive)
            ttomkins Toby Tomkins (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes